--- a/css/style.css
+++ b/css/style.css
@@ -548,14 +548,24 @@ p {
   font-weight: 400;
 }
 .faq-questions {
-  padding: 10em 0;
   text-align: center;
+}
+.faq-q-personal {
+  padding-top: 2em;
+}
+.faq-questions a:hover {
+  color: #e29a80;
+}
+.faq-questions p {
+  font-weight: bold;
+  line-height: 2.5;
 }
 .faq-answers {
   width: 70%;
   margin: 0 auto;
   display: grid;
   grid-gap: 5em;
+  padding-top: 3em;
 }
 .faq-content {
   padding-bottom: 16em;
@@ -571,6 +581,7 @@ p {
 .faq-txt {
   position: relative;
   z-index: 1;
+  padding-top: 10em;
 }
 
 /* VIDEO CONTENT */
@@ -857,7 +868,7 @@ footer h2 {
     cursor: pointer;
   }
   .mobile-btn .fas {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     margin: auto 0;
   }
   .container-portfolio {
@@ -968,7 +979,7 @@ footer h2 {
 @media (max-width: 420px) {
   /* general */
   p {
-    font-size: 0.9rem;
+    font-size: 1.2rem;
   }
   .camilla-name {
     font-size: 1.3rem;
@@ -985,7 +996,7 @@ footer h2 {
     top: -20px;
   }
   .txt-headline {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
   .main-page {
     width: 100%;
@@ -1027,6 +1038,12 @@ footer h2 {
   }
   .year p {
     font-size: 0.8rem;
+  }
+
+  /* work */
+  .mobile-btn p {
+    padding-left: 1em;
+    text-align: center;
   }
 
   /* music */
