--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@ body {
   position: relative; /* For footer stickyness */
   background-color: #cadcc4;
 }
+button {
+  cursor: pointer;
+  outline: none;
+}
+a {
+  text-decoration: none;
+}
 h1,
 h2 {
   text-transform: uppercase;
@@ -361,15 +368,339 @@ p {
 
 /* WORK PAGE */
 
+.work-topic {
+  margin: 0 auto;
+  margin-top: 12em;
+  margin-bottom: 1.5em;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  height: 350px;
+  width: 750px;
+}
+.work-topic:last-child {
+  margin-bottom: 16em;
+}
+.work-topic-txt {
+  background: rgba(255, 255, 255, 0.6);
+  position: absolute;
+  width: 50%;
+  bottom: -40px;
+  top: -40px;
+  right: 0;
+  border-radius: 4px;
+  padding: 8em 3em;
+  display: grid;
+}
+.work-topic-txt button {
+  background-color: transparent;
+  border-radius: 8px;
+  border: 2px solid #393e69;
+  padding: 0.3em 3em;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 1.3rem;
+  margin-top: 1.5em;
+  width: 40%;
+  justify-self: end;
+  transition: 0.2s;
+}
+.work-topic-txt button a {
+  color: #393e69;
+}
+.work-topic-txt button:hover {
+  transform: scale(1.1);
+  background-color: #f89f4d;
+}
+
+.work-topic-txt h2 {
+  padding-bottom: 0.3em;
+}
+
+.comp-svg {
+  position: absolute;
+  left: 0;
+}
+#nmb-one {
+  animation: numbers 1.5s ease-in-out infinite;
+}
+#nmb-two {
+  animation: numbers 1.5s ease-in-out infinite 0.5s;
+}
+#nmb-three {
+  animation: numbers 1.5s ease-in-out infinite 0.7s;
+}
+#nmb-four {
+  animation: numbers 1.5s ease-in-out infinite 0.9s;
+}
+#nmb-five {
+  animation: numbers 1.5s ease-in-out infinite 1.1s;
+}
+#nmb-six {
+  animation: numbers 1.5s ease-in-out infinite 1.3s;
+}
+#nmb-seven {
+  animation: numbers 1.5s ease-in-out infinite 1.5s;
+}
+
+@keyframes numbers {
+  10% {
+    opacity: 0;
+  }
+}
+
+.bly-svg {
+  position: absolute;
+  left: 40px;
+  top: 200px;
+}
+
+#written path:nth-child(2) {
+  stroke-dasharray: 340px;
+  stroke-dashoffset: 340px;
+  animation: written 1.5s ease forwards;
+}
+#heart {
+  stroke-dasharray: 340px;
+  stroke-dashoffset: 340px;
+  animation: written 2s ease forwards 0.5s;
+}
+#heart-inner {
+  stroke-dasharray: 2000px;
+  stroke-dashoffset: 2000px;
+  animation: written 3s ease forwards 1s;
+}
+#written path:nth-child(3) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 2s ease forwards 2s;
+}
+#written path:nth-child(4) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 3s ease forwards 2.5s;
+}
+#written path:nth-child(5) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 3s ease forwards 3s;
+}
+#written path:nth-child(6) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 3s ease forwards 3.5s;
+}
+#written path:nth-child(7) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 2s ease forwards 4s;
+}
+#written path:nth-child(8) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 1s ease forwards 4.5s;
+}
+#written path:nth-child(9) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 2s ease forwards 5s;
+}
+#written path:nth-child(10) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 2s ease forwards 5.5s;
+}
+#written path:nth-child(11) {
+  stroke-dasharray: 1000px;
+  stroke-dashoffset: 1000px;
+  animation: written 3s ease forwards 6s;
+}
+
+@keyframes written {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+/*
+#bly-one {
+  animation: bly 2s ease-in-out infinite;
+}
+#bly-two {
+  animation: bly 2s ease-in-out infinite 0.1s;
+}
+#bly-three {
+  animation: bly 2s ease-in-out infinite 0.3s;
+}
+#bly-four {
+  animation: bly 2s ease-in-out infinite 0.5s;
+}
+#bly-five {
+  animation: bly 2s ease-in-out infinite 0.7s;
+}
+#bly-six {
+  animation: bly 2s ease-in-out infinite 0.9s;
+}
+#bly-seven {
+  animation: bly 2s ease-in-out infinite 1.1s;
+}
+#bly-eight {
+  animation: bly 2s ease-in-out infinite 1.3s;
+}
+#bly-nine {
+  animation: bly 2s ease-in-out infinite 1.5s;
+}
+#bly-ten {
+  animation: bly 2s ease-in-out infinite 1.7s;
+}
+#bly-eleven {
+  animation: bly 2s ease-in-out infinite 1.9s;
+} */
+
+.uxr-svg {
+  position: absolute;
+  left: 0;
+}
+
+#let-one,
+#let-two,
+#let-three,
+#let-four,
+#let-five,
+#let-six,
+#let-seven,
+#let-eight,
+#let-nine,
+#let10,
+#let-eleven,
+#let-twelve,
+#let-thirteen,
+#let-fourteen,
+#let-fifteen,
+#let-sixteen,
+#let-seventeen {
+  animation: letter 10s ease forwards;
+  stroke-dasharray: 100px;
+  stroke-dashoffset: 100px;
+  animation-iteration-count: infinite;
+}
+
+#let-one {
+  animation-delay: 1.8s;
+}
+#let-two {
+  animation-delay: 2s;
+}
+#let-three {
+  animation-delay: 2.2s;
+}
+#let-four {
+  animation-delay: 2.4s;
+}
+#let-five {
+  animation-delay: 2.6s;
+}
+#let-six {
+  animation-delay: 2.8s;
+}
+#let-seven {
+  animation-delay: 3s;
+}
+#let-eight {
+  animation-delay: 3.2s;
+}
+#let-nine {
+  animation-delay: 3.4s;
+}
+#let10 {
+  animation-delay: 3.6s;
+}
+#let-eleven {
+  animation-delay: 3.8s;
+}
+#let-twelve {
+  animation-delay: 4s;
+}
+#let-thirteen {
+  animation-delay: 4.2s;
+}
+#let-fourteen {
+  animation-delay: 4.4s;
+}
+#let-fifteen {
+  animation-delay: 4.6s;
+}
+#let-sixteen {
+  animation-delay: 4.8s;
+}
+#let-seventeen {
+  animation-delay: 5s;
+}
+
+@keyframes letter {
+  0% {
+    stroke-dashoffset: 100px;
+  }
+  30% {
+    stroke-dashoffset: 0;
+  }
+  70% {
+    stroke-dashoffset: 0;
+  }
+  71% {
+    stroke-dashoffset: 100px;
+  }
+}
+
+/* DESIGN WORK PAGE */
+
+.work-descr {
+  text-align: center;
+}
+.work-descr.uxr {
+  padding-top: 2em;
+}
+.work-back-link {
+  padding-left: 8em;
+  padding-top: 8em;
+}
+.work-back-link a {
+  color: #393e69;
+}
+.work-back-link .fas {
+  padding-right: 0.6em;
+}
+.work-back-link:hover {
+  text-decoration: underline;
+}
+
+.design-container {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 3em;
+  margin-bottom: 12em;
+}
+.design-topic img {
+  width: 100%;
+  padding-bottom: 5em;
+}
+.design-topic {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2em;
+  padding-top: 4em;
+}
+.design-topic h2 {
+  padding-bottom: 0.4em;
+  padding-top: 1em;
+}
+
+/* UXR WORK PAGE */
+
 .mobile-btns {
   display: none;
 }
 .top-link-box {
   display: none;
-}
-.work-descr {
-  text-align: center;
-  padding-top: 7em;
 }
 .projects {
   justify-content: space-between;
@@ -400,6 +731,18 @@ p {
 
 .pro-btn.active {
   background-color: #f89f4d;
+}
+
+/* CODE WORK PAGE */
+
+.code-languages {
+  font-weight: bold;
+  padding: 0.5em 0;
+  font-size: 1.2rem;
+}
+.txt-link {
+  color: #393e69;
+  text-decoration: underline;
 }
 
 /* PORTFOLIO PAGES */
@@ -723,6 +1066,12 @@ footer h2 {
     font-size: 7.5rem;
     padding-bottom: 0.6em;
   }
+  .camilla-name {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 1.1rem;
+  }
   .title.work,
   .title.music,
   .title.contact,
@@ -825,6 +1174,62 @@ footer h2 {
   }
 
   /* work */
+
+  .comp-svg {
+    width: 300px;
+    height: 240px;
+  }
+  .bly-svg {
+    width: 500px;
+    height: 240px;
+    padding: 0;
+    top: 150px;
+  }
+  .uxr-svg {
+    width: 330px;
+    height: 230px;
+    left: 10px;
+    top: 20px;
+  }
+  .work-topic {
+    height: 250px;
+    width: 550px;
+  }
+  .work-topic-txt {
+    padding: 4em 3em;
+    width: 40%;
+  }
+  .work-topic-txt button {
+    padding: 0;
+    margin-top: 0;
+    font-size: 1rem;
+  }
+
+  /* code and design work */
+  .work-back-link {
+    text-align: center;
+    padding: 7em 0 1em;
+  }
+  .design-container {
+    margin-top: 0.5em;
+  }
+  .design-topic {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #393e69;
+    padding-top: 3em;
+  }
+  .code-languages {
+    padding-bottom: 0;
+  }
+  .topic-p {
+    padding-bottom: 3em;
+  }
+  .design-topic img {
+    padding-bottom: 0.5em;
+  }
+
+  /* uxr work */
   .work-container {
     width: 90%;
     margin: 0 auto;
@@ -832,8 +1237,8 @@ footer h2 {
   }
   .work-descr {
     text-align: center;
-    padding-top: 4em;
-    padding-bottom: 3em;
+    padding-top: 1em;
+    padding-bottom: 0em;
   }
   #pro-1-content,
   #pro-2-content,
@@ -947,6 +1352,9 @@ footer h2 {
     font-size: 4.5rem;
     padding-bottom: 1em;
   }
+  p {
+    font-size: 1rem;
+  }
   .title.work,
   .title.music,
   .title.contact,
@@ -972,15 +1380,42 @@ footer h2 {
   .icon-menu.contact {
     display: none;
   }
+
+  /* work */
+  .work-topic {
+    width: 370px;
+    height: 220px;
+    margin-top: 8em;
+  }
+  .work-topic-txt {
+    padding: 3em 2em;
+    width: 40%;
+  }
+  .work-topic-txt button {
+    margin-top: 1em;
+  }
+  .comp-svg {
+    width: 250px;
+    height: 200px;
+    top: 20px;
+  }
+  .bly-svg {
+    width: 400px;
+    height: 140px;
+    top: 180px;
+  }
+  .uxr-svg {
+    width: 260px;
+    height: 200px;
+    left: 10px;
+    top: 20px;
+  }
 }
 
 /* MOBILE DEVICE */
 
 @media (max-width: 420px) {
   /* general */
-  p {
-    font-size: 1.2rem;
-  }
   .camilla-name {
     font-size: 1.3rem;
   }
@@ -1041,6 +1476,26 @@ footer h2 {
   }
 
   /* work */
+  .work-topic {
+    width: 310px;
+  }
+  .comp-svg {
+    width: 210px;
+    height: 190px;
+  }
+  .bly-svg {
+    left: 30px;
+    width: 300px;
+    height: 180px;
+  }
+  .work-topic-txt button {
+    padding: 0.3em 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* uxr work */
   .mobile-btn p {
     padding-left: 1em;
     text-align: center;
@@ -1086,5 +1541,16 @@ footer h2 {
   }
   .icon-main {
     font-size: 0.44rem;
+  }
+
+  /* work */
+  .work-topic {
+    width: 290px;
+    height: 240px;
+  }
+  .bly-svg {
+    left: 30px;
+    width: 250px;
+    height: 120px;
   }
 }
