--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,7 @@ p {
 .top-main.faq {
   background-color: #deb4a5;
 }
-.top-main.video {
-  background-color: #f37449;
-}
+
 .title {
   font-family: "Josefin Sans", sans-serif;
   font-size: 12.5rem;
@@ -99,8 +97,7 @@ p {
 .title.music,
 .title.contact,
 .title.about-me,
-.title.faq,
-.title.video {
+.title.faq {
   width: 100%;
   text-align: center;
   position: absolute;
@@ -191,9 +188,9 @@ p {
 .icon-menu.contact-current a {
   color: #f8b5b8;
 }
-.icon-menu.video-current a {
+/* .icon-menu.video-current a {
   color: #f37449;
-}
+} */
 
 /* BURGER CONTENT */
 
@@ -929,7 +926,7 @@ p {
 
 /* VIDEO CONTENT */
 
-.video-content {
+/* .video-content {
   text-align: center;
 }
 .video-content h2 {
@@ -939,7 +936,7 @@ p {
   font-size: 20rem;
   color: #f37449;
   opacity: 50%;
-}
+} */
 
 /* FOOTER */
 footer {
@@ -997,9 +994,9 @@ footer h2 {
 .footer.faq {
   background-color: #deb4a5;
 }
-.footer.video {
+/* .footer.video {
   background-color: #f37449;
-}
+} */
 
 /* RESPONSIVENESS */
 
@@ -1018,8 +1015,7 @@ footer h2 {
   .title.music,
   .title.contact,
   .title.about-me,
-  .title.faq,
-  .title.video {
+  .title.faq {
     top: -65px;
   }
   .camilla-on-pic {
@@ -1076,8 +1072,7 @@ footer h2 {
   .title.music,
   .title.contact,
   .title.about-me,
-  .title.faq,
-  .title.video {
+  .title.faq {
     top: -50px;
   }
   .main-page {
@@ -1359,8 +1354,7 @@ footer h2 {
   .title.music,
   .title.contact,
   .title.about-me,
-  .title.faq,
-  .title.video {
+  .title.faq {
     top: -30px;
   }
 
@@ -1376,7 +1370,6 @@ footer h2 {
     padding-bottom: 4em;
   }
   /* menu */
-  .icon-menu.video,
   .icon-menu.contact {
     display: none;
   }
@@ -1426,8 +1419,7 @@ footer h2 {
   .title.music,
   .title.contact,
   .title.about-me,
-  .title.faq,
-  .title.video {
+  .title.faq {
     top: -20px;
   }
   .txt-headline {
